@@ -1,4 +1,7 @@
 2004-09-20	blytkerchan
+	* bootstrap.sh (gen_configure_ac): new bootstrap var BUILD_KERNEL
+	* configure.ac.in: ditto
+
 	* Makefile.in.in [real_all]: add kernel
 	* bootstrap.sh (gen_makefile_in): add $$__KERNEL__$$ bootstrap var
 	add diff modules for the kernel
